// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`editFile basic operations should replace text with new content 1`] = `
"line1
replaced line2
line3
line4
line5"
`;

exports[`editFile basic operations should replace multiline text 1`] = `
"line1
replaced lines 2 and 3
line4
line5"
`;

exports[`editFile basic operations should handle multiple operations in sequence 1`] = `
"first line
line2
line3
line4
last line"
`;

exports[`editFile special markers should insert at start of file with START_OF_FILE 1`] = `
"new start
line1
line2
line3
line4
line5"
`;

exports[`editFile special markers should insert at end of file with END_OF_FILE 1`] = `
"line1
line2
line3
line4
line5
new end"
`;

exports[`editFile edge cases should handle empty replace text 1`] = `
"line1

line3
line4
line5"
`;

exports[`editFile edge cases should handle whitespace in search text 1`] = `
"  line1
    replaced line2
  line3"
`;

exports[`editFile edge cases should handle newlines in search text 1`] = `
"line1
replaced multiline
line4
line5"
`;

exports[`editFile complex scenarios should handle multiple operations with different content 1`] = `
"first line
line2
middle line
line4
last line"
`;

exports[`editFile complex scenarios should handle operations that create new searchable text 1`] = `
"line1
line2
modified marker
line3
line4
line5"
`;

exports[`editFile complex scenarios should handle code-like content with indentation 1`] = `
"function test() {
  const x = 1;
  const z = 3;
  const y = 2;
  return x + y;
}"
`;

exports[`editFile complex scenarios should handle JSON-like content 1`] = `
"{
  "name": "test",
  "version": "1.0.0",
  "scripts": {
    "test": "bun test"
  },
  "dependencies": {}
}"
`;
